# crate-dig

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CNAME  CODEX.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  backup.sh  dprint.json  mcp-config.example.json  mcp.env.example
.github/workflows/: broker-ci.yml  ci.yml  docs-pages.yml  format.yml  release.yml
broker/: README.md  package-lock.json  package.json  vitest.config.ts  wrangler.toml
broker/migrations/: 0001_initial.sql
broker/scripts/: dev.sh
docs/: README.md  backup-and-restore.md  conventions.md  discogs-broker-auth.md  discogs-broker-test-first-handover.md  genre-classification-sop.md  rekordbox-gotchas.md  rekordbox-internals.md  set-builder-sop.md
scripts/: backup.sh  release-check.sh
site/: astro.config.mjs  package-lock.json  package.json
src/: audio.rs  audit.rs  beatport.rs  changes.rs  classify.rs  cli.rs  color.rs  config.rs  corpus.rs  db.rs  discogs.rs  eval_routing.rs  eval_tasks.rs  genre.rs  keychain.rs  main.rs  normalize.rs  store.rs  tags.rs  tools.rs  types.rs  xml.rs
stratum-dsp/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
stratum-dsp/src/: config.rs  error.rs  lib.rs
stratum-dsp/src/analysis/: confidence.rs  metadata.rs  mod.rs  result.rs
stratum-dsp/src/features/: decay.rs  mod.rs  modulation.rs
stratum-dsp/src/features/beat_tracking/: bayesian.rs  hmm.rs  mod.rs  tempo_variation.rs  time_signature.rs
stratum-dsp/src/features/chroma/: extractor.rs  mod.rs  normalization.rs  smoothing.rs
stratum-dsp/src/features/key/: detector.rs  key_changes.rs  key_clarity.rs  mod.rs  templates.rs
stratum-dsp/src/features/onset/: consensus.rs  energy_flux.rs  hfc.rs  hpss.rs  mod.rs  spectral_flux.rs  threshold.rs
stratum-dsp/src/features/period/: autocorrelation.rs  candidate_filter.rs  comb_filter.rs  mod.rs  multi_resolution.rs  novelty.rs  peak_picking.rs  tempogram.rs  tempogram_autocorr.rs  tempogram_fft.rs
stratum-dsp/src/ml/: edge_cases.rs  mod.rs  onnx_model.rs  refinement.rs
stratum-dsp/src/preprocessing/: channel_mixer.rs  mod.rs  normalization.rs  silence.rs
stratum-dsp/tests/: integration_tests.rs
stratum-dsp/tests/fixtures/: .gitkeep  README.md
(+171 files in other folders)
