[workspace]
members = [".", "stratum-dsp"]
resolver = "3"

[package]
name = "reklawdbox"
version = "0.1.8"
edition = "2024"
homepage = "https://reklawdbox.com"
license = "MIT"
repository = "https://github.com/ryan-voitiskis/reklawdbox"
description = "MCP server for Rekordbox library management"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "6"
globset = "0.4"
indicatif = "0.17"
libc = "0.2"
lofty = "0.23"
percent-encoding = "2"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
security-framework = "3"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
rusqlite = { version = "0.34", features = ["bundled-sqlcipher-vendored-openssl"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
stratum-dsp = { path = "stratum-dsp" }
strum = { version = "0.27", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "pcm", "aac"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-casefold = "0.2"

[dev-dependencies]
rmcp = { version = "0.15", features = ["client", "transport-io"] }
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
