[package]
name = "stratum-dsp"
version = "1.0.0"
edition = "2021"
authors = ["HLLMR"]
description = "Professional-grade audio analysis engine for DJ applications: BPM detection, key detection, and beat tracking"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.2"
ort = { version = "2.0.0-rc.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rayon = "1.8"

[dev-dependencies]
hound = "3.5"

[features]
default = []
ml = ["ort"]

[lib]
name = "stratum_dsp"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
